--- a/accounts_report/accounts_report/report/accounts_receivable/accounts_receivable.html
+++ b/accounts_report/accounts_report/report/accounts_receivable/accounts_receivable.html
@@ -8,20 +8,24 @@
         </div>
     </div>
 
-    <div class="row" style="padding-top: 15px; font-size: 15px; border-bottom: 4px solid grey;">
-        <div class="col-xs-12 text-center">
+    <div class="row" style="padding-top: 15px; font-size: 15px;">
+        <div class="col-xs-3 text-center">
+        </div>
+        <div class="col-xs-6 text-center" style="border-bottom: 4px solid grey;">
             <b>STATEMENT OF ACCOUNT</b><br>
+        </div>
+        <div class="col-xs-3 text-center">
         </div>
     </div>
     
-    <div class="row d-flex align-items-end justify-content-between" style="padding-top: 10px; font-size: 13px">
+    <div class="row d-flex align-items-end justify-content-between" style="padding-top: 7px; border-bottom: 4px solid grey;padding-top: 10px; font-size: 13px">
         <div class="col-xs-8">
             Code: {{ filters.customer }}<br>
-            Name: {{ filters.customer_name }}<br>
+            Name: {{ filters.customer_name }}<br><br>
             Attention: Accounts Departnemt
         </div>
         <div class="col-xs-4 text-right">
-            Date: {{ frappe.datetime.get_today() }}<br>
+            Date: {%= frappe.datetime.str_to_user(filters.report_date) %}<br>
         </div>
     </div>
 
@@ -37,9 +41,9 @@
         <tbody>
             {% for(var i=0, l=data.length-1; i<l; i++) { %}
                 <tr class="table-info">
-                    <td style="text-align: center;">{%= data[i]["posting_date"] %}</td>
+                    <td style="text-align: center;">{%= frappe.datetime.str_to_user(data[i]["posting_date"]) %}</td>
                     <td>{%= data[i]["voucher_no"] %}</td>
-                    <td>{%= data[i]["remarks"] %}</td>
+                    <td>{%= data[i]["customer_lpo"] %}</td>
                     <td>{%= format_currency(data[i]["outstanding"], data[0]["currency"]) %}</td>
                 </tr>
             {% } %}
@@ -48,7 +52,7 @@
             <tr class="table-info">
                     <td></td>
                     <td></td>
-                    <td style="text-align: right">Total amount due</td>
+                    <td style="text-align: right">TOTAL AMOUNT DUE</td>
                     <td>{%= format_currency(data[data.length-1]["outstanding"], data[0]["currency"]) %}</td>
                 </tr>
         </tfoot>
